# PyResearchDB

./: .gitignore  AuthorsWindow.py  Index.py  MainWindow.py  PapersWindow.py  TagsWindow.py  commands.py  requirements.txt  tags.json  test.py  todo.txt
Electron/: main.js  package-lock.json  package.json
Old Python/: AuthorsWindow.py  Index.py  MainWindow.py  PapersWindow.py  TagsCheckbox.py  TagsWindow.py  commands.py  tags.json  test.py
Poppler C++/: CMakeLists.txt  api.cpp  test.cpp
Poppler Python/: api.py  api.txt  api_qt5.py  requirements.txt  test.py  textlist_example.json
